# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
#

2004-11-30 18:45:21 GMT	John Goerzen <jgoerzen@complete.org>	patch-127

    Summary:
      Updated tests
    Revision:
      missingh--head--0.5--patch-127


    modified files:
     ChangeLog testsrc/Bitstest.hs testsrc/FiniteMaptest.hs
     testsrc/Listtest.hs testsrc/MIMETypestest.hs


2004-11-30 18:38:47 GMT	John Goerzen <jgoerzen@complete.org>	patch-126

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-126


    modified files:
     ChangeLog cpexample1.hs debian/changelog


2004-11-30 17:24:30 GMT	John Goerzen <jgoerzen@complete.org>	patch-125

    Summary:
      Checkpointing test conversions
    Revision:
      missingh--head--0.5--patch-125


    modified files:
     ChangeLog testsrc/MIMETypestest.hs testsrc/Pathtest.hs
     testsrc/Printftest.hs testsrc/Strtest.hs testsrc/Testutil.hs


2004-11-30 16:32:17 GMT	John Goerzen <jgoerzen@complete.org>	patch-124

    Summary:
      More tests and fixes
    Revision:
      missingh--head--0.5--patch-124


    modified files:
     ChangeLog TODO libsrc/MissingH/ConfigParser/Types.hs
     testsrc/ConfigParser/Maintest.hs


2004-11-30 16:21:55 GMT	John Goerzen <jgoerzen@complete.org>	patch-123

    Summary:
      More tests, slight bug fixes
    Revision:
      missingh--head--0.5--patch-123


    modified files:
     ChangeLog TODO libsrc/MissingH/ConfigParser.hs
     testsrc/ConfigParser/Maintest.hs


2004-11-30 15:40:16 GMT	John Goerzen <jgoerzen@complete.org>	patch-122

    Summary:
      Tests run
    Revision:
      missingh--head--0.5--patch-122


    modified files:
     ChangeLog testsrc/ConfigParser/Parsertest.hs


2004-11-30 15:37:24 GMT	John Goerzen <jgoerzen@complete.org>	patch-121

    Summary:
      Checkpointing work on tests
    Revision:
      missingh--head--0.5--patch-121


    new files:
     testsrc/Eithertest.hs
